[project]
name = "quasarnix"
version = "0.1.0"
description = "Robust Synthetic Data-Driven Detection of Living-Off-the-Land Reverse Shells"
requires-python = ">=3.10"
authors = [
    { name = "Dmitrijs Trizna", email = "d.trizna@pm.me" }
]

dependencies = [
    "torch>=2.2.1",
    "scikit-learn>=1.3.0",
    "watermark>=2.4.3",
    "lightning>=2.0.0",
    "pyarrow>=14.0.1",
    "tqdm",
    "pandas",
    "numpy",
    "levenshtein>=0.21.1",
    "imbalanced-learn>=0.13.0",
    "nltk>=3.9.1",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "scienceplots>=2.1.1",
    "latex>=0.7.0",
    "xgboost>=3.0.2",
    "bashlex>=0.18",
    "tensorboard>=2.19.0",
    "shap>=0.49.1",
    "seaborn>=0.13.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta" 
